--- a/src/assets/styles/typography.scss
+++ b/src/assets/styles/typography.scss
@@ -1,3 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
 
-$font-size-base: 24px;
+$font-size-500: 28px;
+$font-size-400: 24px;
+$font-size-300: 20px;
+$font-size-200: 16px;
+$font-size-100: 12px;
