--- a/src/assets/styles/components/tip-calculator.scss
+++ b/src/assets/styles/components/tip-calculator.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   width: 70vw;
+  max-width: 1280px;
   margin: auto;
   border-radius: $radius-400;
   background: $secondary-color-100;
